gobmkida/c1/find_liberties_and_neighbors
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_liberties_and_neighbors/src/engine/board.c:3295:20: error: subscripted value is not an array, pointer, or vector
v3 = ++liberty_mark[0]; 
       ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_liberties_and_neighbors/src/engine/board.c:3325:29: error: use of undeclared identifier 'dword_A741AC'
if ( byte_9AA89F[origin] || dword_A741AC[origin] == v3 ) 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_liberties_and_neighbors/src/engine/board.c:3325:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[origin] || dword_A741AC[origin] == v3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_liberties_and_neighbors/src/engine/board.c:3327:30: error: use of undeclared identifier 'byte_9AA89F'
if ( v2 == ( unsigned __int8)byte_9AA89F[origin] ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_liberties_and_neighbors/src/engine/board.c:3345:1: error: use of undeclared identifier 'dword_A741AC'
dword_A741AC[origin] = v3; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_liberties_and_neighbors/src/engine/board.c:3347:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[origin] || string_number[origin + 384] == v3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_liberties_and_neighbors/src/engine/board.c:3349:30: error: use of undeclared identifier 'byte_9AA88C'
if ( v2 == ( unsigned __int8)byte_9AA88C[origin] ) 
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_liberties_and_neighbors/src/obj/1/board.o] Error 1
